# scrapy-fanfare-audio-plugin

./: .gitignore  LICENSE  README.md  how-to-build-scrapy-extension.md  pyproject.toml
example/example/: middlewares.py  settings.py
example/example/spiders/: broken_spider.py  quotes_spider.py
scrapy_beep/: addon.py  extension.py
scripts/: generate_sounds.py
tests/: test_extension.py
